<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Operator Plugin APK</string>
    <string name="sending_mail_title">Sending email...</string>
    <string name="sent_success_title">Sent successfully.</string>
    <plurals name="sent_success_text">
        <item quantity="one"><xliff:g id="sent_emails" example="1">%d</xliff:g> mail has been sent successfully.</item>
        <item quantity="other"><xliff:g id="sent_emails" example="5">%d</xliff:g> mails have been sent successfully.</item>
    </plurals>
    <string name="sent_failed_title">Sent email failed</string>
    <plurals name="sent_failed_text">
        <item quantity="one"><xliff:g id="unsent_emails">%d</xliff:g> unsent mail.</item>
        <item quantity="other"><xliff:g id="unsent_emails">%d</xliff:g> unsent mails.</item>
    </plurals>
    <string name="CT_provider_email_account_signature">\n\nFrom 189 mail</string>
    <string name="CT_provider_email_account_name_description">189mail</string>
    <string name="email_choose_provider_189">189Mail</string>
    <string name="email_choose_provider_sina">Sina</string>
    <string name="email_choose_provider_others">Others</string>
    <string name="homepage_base_site_navigation" translatable="false">
        content://com.android.browser.site_navigation/websites</string>
    <string-array name="bookmarks_for_op09" translatable="false">
        <item>新浪微博</item>
        <item translatable="false">http://weibo.com/</item>

        <item>大众点评</item>
        <item translatable="false">http://www.dianping.com/</item>

        <item>同花顺</item>
        <item translatable="false">http://www.10jqka.com.cn/</item>

        <item>有道词典</item>
        <item translatable="false">http://dict.youdao.com/</item>

        <item>我查查</item>
        <item translatable="false">http://www.wochacha.com/</item>
    </string-array>
    <string-array name="predefined_websites_op09" translatable="false">
        <item>新浪微博</item>
        <item>http://weibo.com/</item>
        <item>op09_thumb_weibo</item>

        <item>大众点评</item>
        <item>http://www.dianping.com/</item>
        <item>op09_thumb_dianping</item>

        <item>同花顺</item>
        <item>http://www.10jqka.com.cn/</item>
        <item>op09_thumb_jqka</item>

        <item>有道词典</item>
        <item>http://dict.youdao.com/</item>
        <item>op09_thumb_youdao</item>

        <item>我查查</item>
        <item>http://www.wochacha.com/</item>
        <item>op09_thumb_chacha</item>
    </string-array>
    <string name="add_new_bookmark">Add bookmark</string>
    <string name="new_folder">New folder</string>
    <string name="low_storage_dialog_title_on_external">Attention</string>
    <string name="low_storage_dialog_msg_on_external">The phone storage does not have enough space. Can not download now.</string>
    <string name="low_storage_dialog_title_on_extra">Attention</string>
    <string name="low_storage_dialog_msg_on_extra">The extra storage does not have enough space. Can not download now.</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_dlg">Delete the browser navigation history?</string>
    <string name="pref_extras_set_download_directory_title">Set download directory</string>
    <string name="none_audio_file">Not supported file format.</string>
    <string name="select_folder_empty">Selected folder has no music.</string>
    <string name="add_folder_to_play">Play folder</string>
    <string name="add_folder_as_playlist">Add folder as playlist</string>
    <string name="add_song_to_play">Play file</string>
    <string name="international_roaming_label">Roaming Settings</string>
    <string name="network_select_title">Network selection and settings</string>
    <string name="prl_title">CDMA PRL update</string>
    <string name="roaming_hotline_title">Free service</string>
    <string name="summary_free_service" translatable="false">+86 18918910000</string>
    <string name="reset_to_default_title">Reset to default</string>
    <string name="time_zone_recommend_title">Time zone recommendation</string>
    <string name="time_settings_title">Time display mode</string>
    <string name="time_zone_recommend_notify_summary">Touch to view the recommended time zone</string>
    <string name="notes_title">Description:</string>
    <string name="notes_summary">This menu applicables for China Telecom user\'s card, if you have any questions, please contact China Telecom customer service.</string>
    <string name="main_sim_title">Set as main card</string>
    <string name="sim_selection_title">UIM/SIM selection</string>
    <string name="current_network_info_title">Current Network Info</string>
    <string name="status_current_sidnid" translatable="false">SID、NID</string>
    <string name="status_current_cellid">CELL ID</string>
    <string name="status_ct_prl_version" translatable="false">PRL Version </string>
    <string name="status_ct_unknown" translatable="false">Unknown</string>
    <string name="status_ct_network_type">Network Type</string>
    <string name="ct_sms_center" translatable="false">SMS Center Number</string>
    <string name="status_current_operators" translatable="false">Current Operators</string>
    <string name="current_operators_mccmnc" translatable="false">MCC、MNC</string>
    <string name="status_signal_strength">Signal strength</string>
    <string name="device_info_not_available">Not available</string>
    <string name="call_settings">Call settings</string>
    <string name="esurfing_dialing">eSurfing dialing</string>
    <string name="esurfing_dialing_summary">Show eSurfing dialing dialogue when dial in international roaming state</string>
    <string name="esurfing_dialing_guide">eSurfing dialing guide</string>
    <string name="esurfing_dialing_assist">INTERNATIONAL DIAL ASSIST</string>
    <string name="minutereminder_title">Minute reminder</string>
    <string name="minutereminder_turnon">Turn on minute reminder at 50s of every minute</string>
    <string name="minutereminder_turnoff">Turn off minute reminder</string>
    <string name="dual_mic_title">Noise reduction</string>
    <string name="dual_mic_turnoff">Dual mic noise Reduction off</string>
    <string name="dual_mic_turnon">Dual mic noise Reduction on</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" translatable="false"></string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="pref_sms_settings_title">"Text message (SMS) settings"</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_title_sms_delivery_reports">Request delivery report</string>
    <string name="sms_service_center">SMS Service Center</string>
    <string name="sms_save_location">SMS storage location</string>
    <string name="pref_mms_settings_title">"Multimedia message (MMS) settings"</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_title_mms_delivery_reports">Request delivery report</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_title_mms_read_reports">Request read report</string>
    <string name="pref_summary_mms_auto_reply_read_reports">Send a read report if requested by the MMS sender</string>
    <string name="pref_title_mms_auto_reply_read_reports">Send read report</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="cell_broadcast">Cell broadcast</string>
    <string name="cell_broadcast_title">Cell broadcast settings</string>
    <string name="cell_broadcast_settings">SIM card cell broadcast settings</string>
    <string name="pref_title_display_preference_settings">DISPLAY &#38; PREFERENCE</string>
    <string name="pref_chat_wallpaper">Chat wallpaper</string>
    <string name="pref_title_message_font_size">Message font size</string>
    <string name="pref_summary_message_font_size">Message font size</string>
    <string name="pref_auto_rotation">Auto rotation</string>
    <string name="pref_show_email_address">Show email address</string>
    <string name="pref_summary_show_email_address">Include email address in contact resultes</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit"><xliff:g id="count">%1$s</xliff:g> messages per conversation</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_backup_restore_settings">BACKAGE &#38; RESTORE</string>
    <string name="pref_backage_message">Backup message</string>
    <string name="pref_summary_backup_message">Last backup:Never</string>
    <string name="pref_restore_message">Restore message</string>
    <string name="pref_summary_restore_message">Restore your backup messages</string>
    <string name="pref_title_wappush_settings">Service Message Setting</string>
    <string name="pref_title_wappush_enable">Enable WAP PUSH</string>
    <string name="pref_summary_wappush_enable">Enable to receive WAP PUSH</string>
    <string name="pref_title_wappush_sl_autoloading">Auto-Launch SL</string>
    <string name="pref_summary_wappush_sl_autoloading">Automatically launch service loading(SL) message when received</string>
    <string name="pref_title_long_press_operation_guide">Long press operation guide</string>
    <string name="pref_title_watch_animation">Watch animation</string>
    <string name="pref_sms_storage_title">Storage settings</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="quick_text_editor">Edit quick text</string>
    <string name="pref_summary_mms_group_mms">Use MMS to send a single message when there are multiple recipients</string>
    <string name="pref_title_mms_group_mms">Group messaging</string>
    <string name="pref_title_mms_creation_mode">Creation Mode</string>
    <string name="pref_summary_mms_creation_mode">MMS creation mode for compose message</string>
    <string name="pref_title_mms_size_limit">Size Limit</string>
    <string name="pref_summary_mms_size_limit">MMS size limit for composing a message</string>
    <string name="mms_priority_label">Priority\u0020</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_title_notification_enabled">Message notifications</string>
    <string name="pref_title_notification_ringtone">Sound</string>
    <string name="product_model">Model number</string>
    <string name="hardware_version">Hardware version</string>
    <string name="software_version">Software version</string>
    <string name="prl_version">PRL Version</string>
    <string name="current_sid">SID</string>
    <string name="current_nid">NID</string>
    <string name="current_meid">MEID</string>
    <string name="current_imei1">IMEI1</string>
    <string name="current_imei2">IMEI2</string>
    <string name="current_iccid1">ICCID1</string>
    <string name="current_iccid2">ICCID2</string>
    <string name="current_uim_id">UIM ID</string>
    <string name="unknown">unkonwn</string>
</resources>