<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/call_settings">
    <CheckBoxPreference 
        android:key="minute_reminder_key"
        android:title="@string/minutereminder_title"
        android:defaultValue="false"
        android:persistent="false"
        android:summaryOn="@string/minutereminder_turnoff"
        android:summaryOff="@string/minutereminder_turnon"/>

    <CheckBoxPreference 
        android:key="dual_mic_key"
        android:title="@string/dual_mic_title"
        android:defaultValue="true"
        android:summaryOn="@string/dual_mic_turnoff"
        android:summaryOff="@string/dual_mic_turnon"/>

    <PreferenceScreen
        android:key="button_respond_via_sms_key"
        android:title="@string/respond_via_sms_setting_title"
        android:summary="@string/respond_via_sms_setting_summary"
        android:persistent="false">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.RespondViaSmsManager$Settings" />
    </PreferenceScreen>

    <ListPreference
        android:key="button_tty_mode_key"
        android:title="@string/tty_mode_option_title"
        android:summary="@string/tty_mode_option_summary"
        android:persistent="false"
        android:entries="@array/tty_mode_entries"
        android:entryValues="@array/tty_mode_values"/>

    <PreferenceCategory
            android:title="@string/esurfing_dialing_assist">
        <CheckBoxPreference
                android:key="button_esurfing_dialing"
                android:persistent="false"
                android:title="@string/esurfing_dialing"
                android:summary="@string/esurfing_dialing_summary"/>
        <PreferenceScreen
                android:key="button_esurfing_dialing_guide"
                android:title="@string/esurfing_dialing_guide"/>
    </PreferenceCategory>

</PreferenceScreen>
