<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_font_size_setting"
                        android:key="pref_key_font_size_setting">
	    <Preference
	            android:key="pref_key_message_font_size"
	            android:title="@string/pref_title_message_font_size"
	            android:summary="@string/pref_summary_message_font_size" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sms_storage_title"
                      android:key="pref_key_storage_settings">
<!--
    <Preference android:key="pref_key_mms_clear_history"
                      android:title="@string/pref_mms_clear_search_history_title"
                      android:summary="@string/pref_mms_clear_search_history_summary" />
-->
     <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_auto_delete"
                      android:summary="@string/pref_summary_auto_delete"
                      android:title="@string/pref_title_auto_delete" />
    <Preference android:key="pref_key_sms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_sms_delete" />
    <Preference android:key="pref_key_mms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_mms_delete" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_sms_settings_title"
                      android:key="pref_key_sms_settings" >
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_sms_delivery_reports"
                      android:summary="@string/pref_summary_sms_delivery_reports"
                      android:title="@string/pref_title_sms_delivery_reports" />
    <Preference android:key="pref_key_manage_sim_messages"
                      android:summary="@string/pref_summary_manage_sim_messages"
                      android:title="@string/pref_title_manage_sim_messages" />
    <Preference android:key="pref_key_quick_text_editor"
                      android:summary="@string/quick_text_editor"
                      android:title="@string/quick_text_editor" />
    <Preference android:key="pref_key_sms_service_center"
                      android:summary="@string/sms_service_center"
                      android:title="@string/sms_service_center" />
    <Preference android:key="pref_key_sms_validity_period"
                  android:summary="@string/sms_validity_period"
                  android:title="@string/sms_validity_period" />
    <ListPreference
            android:key="pref_key_sms_save_location"
            android:title="@string/sms_save_location"
            android:defaultValue="Phone"
            android:entries="@array/pref_sms_save_location_choices"
            android:entryValues="@array/pref_sms_save_location_values"
            android:dialogTitle="@string/sms_save_location" 
            android:summary="@string/sms_save_location"/>
    <ListPreference
            android:key="pref_key_sms_input_mode"
            android:title="@string/sms_input_mode_title"
            android:defaultValue="Automatic"
            android:entries="@array/pref_sms_input_mode_choice"
            android:entryValues="@array/pref_sms_input_mode_values"
            android:dialogTitle="@string/sms_input_mode_dialog_title" 
            android:summary="@string/sms_input_mode_summary"/>
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_forward_with_sender"
                      android:summary="@string/sms_forward_setting_summary"
                      android:title="@string/sms_forward_setting" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_mms_settings_title"
                      android:key="pref_key_mms_settings">
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_group_mms"
                      android:summary="@string/pref_summary_mms_group_mms"
                      android:title="@string/pref_title_mms_group_mms" />
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_delivery_reports"
                      android:summary="@string/pref_summary_mms_delivery_reports"
                      android:title="@string/pref_title_mms_delivery_reports" />
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_read_reports"
                      android:summary="@string/pref_summary_mms_read_reports"
                      android:title="@string/pref_title_mms_read_reports" />
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_auto_reply_read_reports"
                      android:summary="@string/pref_summary_mms_auto_reply_read_reports"
                      android:title="@string/pref_title_mms_auto_reply_read_reports"/>
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_mms_auto_retrieval"
                      android:title="@string/pref_title_mms_auto_retrieval"
                      android:summary="@string/pref_summary_mms_auto_retrieval" />
    <CheckBoxPreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_mms_auto_retrieval"
                        android:defaultValue="false"
                        android:key="pref_key_mms_retrieval_during_roaming"
                        android:title="@string/pref_title_mms_retrieval_during_roaming"
                        android:summary="@string/pref_summary_mms_retrieval_during_roaming" />
    <ListPreference
            android:key="pref_key_mms_creation_mode"
            android:title="@string/pref_title_mms_creation_mode"
            android:defaultValue="FREE"
            android:entries="@array/pref_mms_creation_mode_choices"
            android:entryValues="@array/pref_mms_creation_mode_values"
            android:dialogTitle="@string/pref_title_mms_creation_mode" 
            android:summary="@string/pref_summary_mms_creation_mode"/>
   <ListPreference
            android:key="pref_key_mms_size_limit"
            android:title="@string/pref_title_mms_size_limit"
            android:dialogTitle="@string/pref_title_mms_size_limit"
            android:summary="@string/pref_summary_mms_size_limit"
            android:defaultValue="300"
            android:entries="@array/pref_mms_size_limit_choices"
            android:entryValues="@array/pref_mms_size_limit_values"/>
    <ListPreference
            android:key="pref_key_mms_priority"
            android:title="@string/mms_priority_label"
            android:dialogTitle="@string/mms_priority_label"
            android:summary="@string/mms_priority_label"
            android:defaultValue="Normal"
            android:entries="@array/pref_key_mms_priority_choices"
            android:entryValues="@array/pref_key_mms_priority_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/cell_broadcast_title">
     <Preference
        android:key="pref_key_cell_broadcast"
        android:title="@string/cell_broadcast"
        android:summary="@string/cell_broadcast_settings"
        android:persistent="false">
    </Preference>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_notification_settings_title">
    <CheckBoxPreference android:key="pref_key_enable_notifications"
                        android:title="@string/pref_title_notification_enabled"
                        android:summary="@string/pref_summary_notification_enabled"
                        android:defaultValue="true" />
    <RingtonePreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_enable_notifications"
                        android:key="pref_key_ringtone"
                        android:title="@string/pref_title_notification_ringtone"
                        android:ringtoneType="notification"
                        android:defaultValue="content://settings/system/notification_sound" />
  </PreferenceCategory>
  
  <PreferenceCategory android:title="@string/pref_title_wappush_settings"
                      android:key="pref_key_wappush_settings" >
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_wappush_enable"
                      android:summary="@string/pref_summary_wappush_enable"
                      android:title="@string/pref_title_wappush_enable" />            
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_wappush_sl_autoloading"
                      android:dependency="pref_key_wappush_enable"
                      android:summary="@string/pref_summary_wappush_sl_autoloading"
                      android:title="@string/pref_title_wappush_sl_autoloading" />
  </PreferenceCategory>
  <!--
  
   <PreferenceCategory android:title="@string/pref_title_io_settings"
                      android:key="pref_title_io_settings" >
    <Preference android:key="pref_key_import_msg"
                      android:summary="@string/pref_summary_import_msg"
                      android:title="@string/pref_title_import_msg" />            
    <Preference android:key="pref_key_export_msg"
                      android:summary="@string/pref_summary_export_msg"
                      android:title="@string/pref_title_export_msg" />
  </PreferenceCategory>
    -->
   <PreferenceCategory android:title="@string/pref_title_long_press_operation_guide"
                      android:key="pref_title_long_press_operation_guide" >
    <Preference android:key="pref_key_watch_animation"
                      android:title="@string/pref_title_watch_animation" />            
  </PreferenceCategory>
</PreferenceScreen>
