<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:key="product_model"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/product_model"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="hardware_version"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/hardware_version"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="software_version"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/software_version"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="prl_version"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/prl_version"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="sid"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_sid"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="nid"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_nid"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="meid"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_meid"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="imei1"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_imei1"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="imei2"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_imei2"
        android:summary="@string/unknown"/>

    <Preference android:key="operator1"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_operators_mccmnc"
        android:summary="@string/unknown"/>

    <Preference android:key="operator2"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_operators_mccmnc"
        android:summary="@string/unknown"/>

    <Preference android:key="iccid1"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_iccid1"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="iccid2"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_iccid2"
        android:summary="@string/unknown"
        android:persistent="false"/>

    <Preference android:key="uim_id"
        style="?android:attr/preferenceInformationStyle"
        android:title="@string/current_uim_id"
        android:summary="@string/unknown"
        android:persistent="false"/>

</PreferenceScreen>
